--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
-<p> hello</p>
-
+<head>
+  <link rel="stylesheet" type="text/css" href="index.css">
+  <script src="index.js"></script>
+</head>
+<body>
+  <div id ="background-wrapper" width="100%">
+    <div id ="number-block">
+        <div class="circle" id="number">  </div>
+        <input class="input-textbox" id="answer" type="text"></input>
+    </div>
+  </div>
+</body>
 </body>
 </html>
-
