add background color changes and validation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script src="index.js"></script>
 </head>
 <body>
-  <div id ="background-wrapper" width="100%">
+  <div id ="backgroundWrapper">
     <div id ="number-block">
         <div class="circle" id="number">  </div>
         <input class="input-textbox" id="answer" type="text"></input>
