--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id ="number-block">
         <div class="circle" id="number">  </div>
         <input class="input-textbox" id="answer" type="text"></input>
+        <div id="correct-answer-hint" ></div>
     </div>
   </div>
 </body>
